--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<style>
-    html,
-    body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-    }
-</style>
-<body>
-    <canvas id="webgl-canvas"></canvas>
-    <script type="module" src="./load.js"></script>
-</body>
+<ul>
+    <li>
+        <a href="primitives/">Primitives</a>
+    </li>
+    <li>
+        <a href="tiles/">Procedurally generated tiles</a>
+    </li>
+</ul>
