Basic shoot 'em up

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <a href="primitives/">Primitives</a>
     </li>
     <li>
+        <a href="shmup/">Shoot 'Em Up</a>
+    </li>
+    <li>
         <a href="tiles/">Procedurally generated tiles</a>
     </li>
 </ul>
