Include a body tag for live reload

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<ul>
-    <li>
-        <a href="primitives/">Primitives</a>
-    </li>
-    <li>
-        <a href="shmup/">Shoot 'Em Up</a>
-    </li>
-    <li>
-        <a href="tiles/">Procedurally generated tiles</a>
-    </li>
-</ul>
+<body>
+    <ul>
+        <li>
+            <a href="primitives/">Primitives</a>
+        </li>
+        <li>
+            <a href="shmup/">Shoot 'Em Up</a>
+        </li>
+        <li>
+            <a href="tiles/">Procedurally generated tiles</a>
+        </li>
+    </ul>
+</body>
